# bbc-speech-kit-encoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scripts/: encode.py  encode_opt.py  metrics.py  synth.py
